--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </tr>
 
       <tr>
-         <td>12-01-2022  12-07-2022 </td>
+         <td>Enero 2022 a Julio 2022 </td>
          <td>Data scientist en Marine Instruments </td>
       </tr>
          <td>2018-2019 </td>
