--- a/hobbies.html
+++ b/hobbies.html
@@ -7,8 +7,8 @@
   <body>
     <h3> My Hobbies</h3>
     <ol>
-      <li> Beer brewing</li>
-      <li>Martial arts</li>
+      <li> Read books.</li>
+      <li>Martial arts.</li>
     </ol>
   </body>
 </html>
